--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,4 +8,4 @@
 
 <%= link_to 'Delete', task_path(@task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 
-<%= link_to 'Update', edit_path %>
+<%= link_to 'Update', edit_task_path %>
