--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,12 @@
-<h1>Tasks</h1>
+<div class="container border border-3 border-dark m-3 p-3">
+  <h1 class="">Tasks</h1>
 
-<ul>
-  <% @tasks.each do |task| %>
-  <li><%= link_to task.title, task_path(task) %></li>
-  <% end %>
-</ul>
+  <ul class="list-unstyled">
+    <% @tasks.each do |task| %>
+    <li><input type="checkbox"><label><%= link_to task.title, task_path(task), :class => "text-decoration-none text-black" %></label></li>
+    <%= link_to 'Delete', task_path(task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    <% end %>
+  </ul>
 
-<%= link_to 'New task', new_task_path %>
+  <%= link_to '+ New task', new_task_path, :class => "btn btn-primary" %>
+</div>
