--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,11 +1,11 @@
-<h1><%= @task.title %></h1>
+<div class="container border border-3 border-dark m-3 p-3">
+  <h1><%= @task.title %></h1>
 
-<p><%= @task.details %></p>
+  <p><%= @task.details %></p>
 
-<p><%= @task.completed %></p>
+  <p><%= @task.completed %></p>
 
-<%= link_to 'Back', tasks_path %>
+  <%= link_to 'Back', tasks_path %>
 
-<%= link_to 'Delete', task_path(@task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-
-<%= link_to 'Update', edit_task_path %>
+  <%= link_to 'Update', edit_task_path %>
+</div>
